	* gm2/gm2spec.c:  detect --version or -fversion and
	  call gm2_version.
	* gm2/lang-options.h:  add new options --version and
	  -fversion.
	* gm2/lang.opt:  add new options --version and
	  -fversion.
	* gm2/gm2-compiler/M2Options.mod:  display version
	  in cc1gm2.
	* tools-src/makeversion:  rewriten.
	* gm2/gm2-compiler/M2Options.mod:  corrected licence
	  version.
	* gm2/gm2/gm2-libs-ch/sckt.c:  removed includes to
	  stdio.h and p2c.h.
	* gm2/gm2spec.c:  added test for source file and only
	  enable linking if the source file found.
	
2008-11-05       Gaius Mulley <gaius@gnu.org>

	* gm2/www/index.ms:  reworded some of the FAQs.
	* gm2/gm2.texi:  fixed spacing
	* testsuite/gm2/pim/options/optimize/run/pass/testadd.mod:
	  fixed dates.
	* testsuite/gm2/pim/options/optimize/run/pass/gm2.exp:
	  fixed link command.
	* testsuite/gm2/pim/options/optimize/run/pass/addition.mod:
	  fixed dates.
        * testsuite/gm2/pim/options/optimize/run/pass/addition.def:
	  fixed dates.
        * lib/gm2.exp:  fixed ability to configure link path -L.
        * lib/gm2-torture.exp:  fixed ability to configure link
	  path -L.

2008-11-04       Gaius Mulley <gaius@gnu.org>

	* All regression tests pass on LP64 Athlon Debian
	  Etch.
	* gm2/gccgm2.c:  gccgm2_BuildArray (new function).
	  build_unary_op changed to handle Modula-2 array
	  arithemetic rather than C pointer and indice
	  computations.
	* gm2/m2pp.c:  m2pp_array_type (new function).
	* gm2/gm2-compiler/Lists.mod:  tidied up spacing.
	* gm2/gm2-compiler/M2GenGCC.mod:  CodeArray (new
	  procedure).  FoldBase and CodeBase removed.
	* gm2/gm2-compiler/M2Quads.def:  ArrayOp replaces
	  BaseOp.
	* gm2/gm2-compiler/M2Quads.mod:  ArrayOp replaces
	  BaseOp.  BuildStaticArray is reimplemented using
	  ArrayOp.
	* gm2/gm2-compiler/M2SubExp.mod:  ArrayOp replaces
	  BaseOp.
	* gm2/gm2-compiler/SymbolTable.mod:  modifications
	  to the debugging hooks.
	* gm2/gm2-compiler/gccgm2.def:  BuildArray (new
	  definition).