@@ -14,8 +14,8 @@
 @c
 
 @setfilename gm2.info
-@set version-GM2     0.68
-@set version-GCC     4.1.2
+
+@include version.texi
 @set version-GDB     6.6
 
 @settitle The GNU Modula-2 front end to GCC (gm2-@value{version-GM2})
@@ -35,7 +35,7 @@
 @sp 2
 @center Gaius Mulley
 @sp 3
-@center Last updated 24th October 2008
+@center Last updated @value{version-update}
 @sp 10
 @c
 @center @image{gm2/images/gnu,,1.5in}
