@@ -91,29 +91,44 @@ EOF
 }
 
 
+function doTexi () {
+
+cat <<EOF > version.texi
+
+@c Generated by makeversion - do not edit
+
+@set version-GM2     ${GM2VERSION}
+@set version-GCC     ${GCCVERSION}
+@set version-update  ${TEXIUPDATE}
+
+EOF
+}
+
+
 progname=$0
 
 function usage () {
    cat <<EOF
-Usage: $progname [-m] [-c] gm2version [gccversion]
-   -m  option requires gccversion to be present
-       and it generates a Modula-2 module M2Version.mod
-   -c  option ignores gccversion
-       and it generates a C file gm2version.c
+Usage: $progname [-m][-c][-t] 
+   -m  generates a Modula-2 module M2Version.mod
+   -c  generates a C file gm2version.c
+   -t  generates a texi file version.texi
 EOF
    exit 0
 }
 
 M2=no
 C=no
+TEXI=no
 
-while getopts ":mch" opt; do
+while getopts ":mcht" opt; do
    case $opt in
 
    m )  M2=yes ;;
    c )  C=yes ;;
+   t )  TEXI=yes ;;
    h )  usage ;;
-   \\?)  usage ;;
+   \\?) usage ;;
    esac
 done
 
@@ -123,12 +138,26 @@ SRCDIR=$1
 GM2VERSION=`cat ${SRCDIR}/gm2/version.c | sed -e '/version_string/!d' -e 's/[^0-9.]*\([0-9.]*\).*/\1/g'`
 GCCVERSION=`echo ${SRCDIR} | sed 's/.*gcc-\([0-9][0-9.]*\).*/\1/g'`
 
+pos=`grep -n texi ${SRCDIR}/gm2/ChangeLog | head -1 | cut -f1 -d':'`
+THEDATE=`head -n ${pos} ${SRCDIR}/gm2/ChangeLog | grep ^2 | head -1 | cut -f1 -d' ' | cut -f1`
+TEXIUPDATE=`date --date=${THEDATE} +'%A %e %B %Y'`
+
 if [ "${M2}" = "yes" ] ; then
    doM2
 elif [ "${C}" = "yes" ] ; then
    doC
+elif [ "${TEXI}" = "yes" ] ; then
+   doTexi
 else
    usage
 fi
 
+#
+#  now we test the consistency of the release number in
+#  $(srcdir)/gm2/gm2-libs/configure.in
+#
 
+if [ "`grep AC_INIT ${SRCDIR}/gm2/gm2-libs/configure.in | grep ${GM2VERSION}`" == "" ] ; then
+   echo "makeversion has found a consistency error:  the ${SRCDIR}/gm2/gm2-libs/configure.in does not match the GNU Modula-2 release number"
+   exit 1
+fi
